# TIPs

./: README.md  requirements.txt
CLI/: pyproject.toml
CLI/tips_cli/: runner.py  utils.py
CLI/tips_cli.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
CLI/tips_cli/steps/: denovo.py  denovo_te.py  integrate_te.py  search_te.py
CLI/tips_cli/tools/: run_denovo_tool_batch_final.py
Nextflow/: README.md  main.nf  nextflow.config
Nextflow/code/: run_denovo_tool_batch_final.py
Nextflow/modules/local/: blastp_canonical_filter.nf  blastp_denovo_peptides.nf  blastp_denovo_peptides_backup.nf  build_denovo_database.nf  build_search_database.nf  comet_search.nf  denovo_all_batch.nf  denovo_all_batch_backup.nf  fdr_filter_cn.nf  fdr_filter_te.nf  iprophet_integration_cn.nf  iprophet_integration_te.nf  mhc_binding_prediction.nf  msfragger_search.nf  msgf_convert.nf  msgf_search.nf  peptide_prophet_cn.nf  peptide_prophet_te.nf  process_denovo_results.nf  raw_to_mgf.nf  raw_to_mzml.nf  separate_te_canonical.nf
Nextflow/subworkflows/: canonical_branch.nf  s0_prepare_inputs.nf  s1_denovo.nf  s2_blastp_build_te_db.nf  s3_build_search_db.nf  s4_search_engines.nf  s5_separate_te_canonical.nf  te_branch.nf
Nextflow/workflows/: tips.nf
TIPs/: README.md
TIPs/CLI/tips_cli/: cli.py
TIPs/CLI/tips_cli.egg-info/: PKG-INFO
TIPs/CLI/tips_cli/steps/: integrate_te.py  prepare.py
configs/: config.example.yaml
tips_pipeline/: cli.py  config.py  fasta_utils.py  ms_postprocess.py  pipelines_dbsearch.py  pipelines_denovo.py  sequence_filters.py  utils.py
(+2 files in other folders)
