[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tips-cli"
version = "0.2.0"
description = "TIPs dockerized CLI"
requires-python = ">=3.9"

dependencies = [
  "typer>=0.12.0",
  "numpy",
  "pandas",
  "PyYAML",
]


[project.scripts]
tips = "tips_cli.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tips_cli = ["tools/*.py"]